[project]
name = "claude-history-manager"
version = "0.1.0"
description = "Claude Code session history management tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["rich>=13.0"]

[project.scripts]
claude-history = "claude_history_manager.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=9.0.3",
    "pytest-cov>=6.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["claude_history_manager"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=claude_history_manager --cov-report=term-missing"
